# tidehunter

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
.cache/clangd/index/: AlternateSet.hh.CE25A14AF9153FA1.idx  AlternateSubst.hh.A6D8A7C6CF13BE3C.idx  AlternateSubstFormat1.hh.EE9A3773EF9B22FD.idx  Anchor.hh.29B26FC558FB0328.idx  AnchorFormat1.hh.4F19EFA680868968.idx  AnchorFormat2.hh.D1228640EC0C7544.idx  AnchorFormat3.hh.B4286A8A008D619B.idx  AnchorMatrix.hh.BFFA57C099C2F661.idx  CBDT.hh.5386B0C132AD61EE.idx  COLR.hh.47E69FC07350D1B1.idx  CPAL.hh.CFA47F4F14C0B506.idx  ChainContextPos.hh.3894171D446822A5.idx  ChainContextSubst.hh.BA45C1C9FFA1DC47.idx  Common.hh.5F39BD613B1950CF.idx  Common.hh.B1FC1CBA1FF4E92D.idx  CompositeGlyph.hh.E1926E744BE02514.idx  ContextPos.hh.591184245DD2196B.idx  ContextSubst.hh.62B93788541126C8.idx  Coverage.hh.EF63F7148ABCFDCE.idx  CoverageFormat1.hh.B74EC6187887A4A8.idx  CoverageFormat2.hh.B9362B2B4C3F34CF.idx  CursivePos.hh.7B090CFA975ACF52.idx  CursivePosFormat1.hh.E55219F5CD000144.idx  ExtensionPos.hh.69ACCCE82DAE6117.idx  ExtensionSubst.hh.A628F5B8ED5A6977.idx  GDEF.hh.487EEA0F15D2904D.idx  GPOS.hh.F2F97D22C6CEBD96.idx  GSUB.hh.A2421400744E25F5.idx  GameState.h.444E2775049212E9.idx  Glyph.hh.2E6B0D3B64CC39AE.idx  GlyphHeader.hh.1B7746B2E1D1CAED.idx  IMG.c.78259A977B7CA3AF.idx  IMG_WIC.c.ECF02A024CB8489F.idx  IMG_avif.c.D9239366A65022FD.idx  IMG_bmp.c.3603584B6039E76B.idx  IMG_gif.c.E96E9B5B8D7133DB.idx  IMG_jpg.c.ED9DD7704B792251.idx  IMG_jxl.c.8F7FCCE29CFC19FC.idx  IMG_lbm.c.D17AC7237410C0B7.idx  IMG_pcx.c.1DDD659ABFAC540C.idx  (+1596 more)
config/: README.md  config-generic.sh
src/: GameState.h  MainMenuState.cpp  MainMenuState.h  Object.h  main.cpp
src/engine/: Object.h
src/engine/ui/: Button.h
